--- a/livingstone.css
+++ b/livingstone.css
@@ -1050,7 +1050,7 @@ a{
     .respondfooter{
         display: block;
         background-color: black;
-        width: 100%;
+        width: 900px;
         height: 2000px;
         color: white;
         font-size: 30px;
